fix: update form margin for improved spacing consistency

--- a/src/index.css
+++ b/src/index.css
@@ -1036,7 +1036,7 @@ form {
   background-color: var(--blue);
   border-radius: var(--border-radius);
   color: #fff;
-  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .stevne-card #streg {
@@ -1066,7 +1066,7 @@ form {
   background-color: var(--lightred);
   border-radius: var(--border-radius);
   color: #fff;
-  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .kamp-container {
